[APPDEV-3168] IP Detect - Sign In Enhancement    fixes for spacing/sizes in IP toolbar/nav    fixes for ajax login not going to correct success page
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@24637 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/globalnav.css
+++ b/projects/Media/docroot/assets/css/common/globalnav.css
@@ -13,6 +13,7 @@
 
 .globalnav_top {
   position: relative;
+  margin-top: 20px;
 }
 
 .globalnav_top a.logo {
